add make docs command, and other endpoints
